# midf

./: .gitignore  .pre-commit-config.yaml  .qgis-plugin-ci  Dockerfile  README.md  as.ts  pyproject.toml  requirements.txt  setup.py
midf/: __init__.py  constants.py  conversion.py  enums.py  linking.py  loading.py  mi_utilities.py  midf_typing.py  packaging.py  typing.py
midf/dataframe_loading/: __init__.py  df_addresses.py  df_amenities.py  df_anchors.py  df_buildings.py  df_details.py  df_fixtures.py  df_footprints.py  df_geofences.py  df_kiosks.py  df_levels.py  df_occupants.py  df_openings.py  df_relationships.py  df_sections.py  df_units.py  df_venues.py
midf/feature_linking/: __init__.py  midf_addresses.py  midf_amenities.py  midf_anchors.py  midf_buildings.py  midf_details.py  midf_fixtures.py  midf_footprints.py  midf_geofences.py  midf_kiosks.py  midf_levels.py  midf_occupants.py  midf_openings.py  midf_relationships.py  midf_sections.py  midf_units.py  midf_venues.py
midf/imdf_model/: __init__.py  address.py  amenity.py  anchor.py  base.py  building.py  detail.py  fixture.py  footprint.py  geofence.py  kiosk.py  level.py  manifest.py  occupant.py  opening.py  relationship.py  section.py  unit.py  venue.py
model/: address.py  amenity.py  anchor.py  base.py  building.py  detail.py  door.py  enums.py  footprint.py  geofence.py  kiosk.py  labeled_feature.py  level.py  occupant.py  opening.py  relationship.py  section.py  unit.py  venue.py
samples/: load_categories.py  load_route.py  load_sample.py  load_styles.py  load_venue.py  venue.imdf
(+569 files in other folders)
