[tool.poetry]
name = "midf"
version = "0.0.1"
description = ""
authors = ["Christian Heider Lindbjerg <chen@mapspeople.com>"]
readme = "README.md"
packages = [{ include = "midf" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = ">=7.2.0"
shapely = '>=2.0.1'
apppath = ">=1.0.0"
warg = ">=1.3.4"
numpy = ">=1.26.2"
jord = { version = ">=0.10.0", extras = ['shapely','networkx'] }
pandas = ">=1.1.1"
fiona = ">=1.10.1"
osmnx = ">=2.0.5"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
pytest = ">=7.2.0"
black = ">=23.1.0"
pre-commit = ">=3.0.0"
furo = ">=2022.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
